--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ul>
+		<li data-shoppinglist="Watch">Apple Watch</li>
+		<li data-shoppinglist="MAC">Macbook Pro</li>
+		<li data-shoppinglist="Earphones">Boat</li>
+	</ul>
+	<ul>
+		<li data-holidayList="historic">Cellular Jail</li>
+<li data-holidayList="tourist">Ladakh</li>
+		<li data-holidayList="entertainment">Goa</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
