--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-shoppinglist="Watch">Apple Watch</li>
-		<li data-shoppinglist="MAC">Macbook Pro</li>
-		<li data-shoppinglist="Earphones">Boat</li>
+		<li data-shoppinglist>Watch</li>
+		<li data-shoppinglist>Macbook Pro</li>
+		<li data-shoppinglist>Boat</li>
 	</ol>
 	<ul>
-		<li data-holidayList="historic">Cellular Jail</li>
-<li data-holidayList="tourist">Ladakh</li>
-		<li data-holidayList="entertainment">Goa</li>
+		<li data-holidayList>Cellular Jail</li>
+<li data-holidayList>Ladakh</li>
+		<li data-holidayList=>Goa</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
