--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="shoppinglist">Watch</li>
-		<li data-ns-test="shoppinglist">Macbook</li>
-		<li data-ns-test="shoppinglist">Boat</li>
+		<li data-ns-test="shoppingList">Watch</li>
+		<li data-ns-test="shoppingList">Macbook</li>
+		<li data-ns-test="shoppingList">Boat</li>
 	</ol>
 	<ul>
-		<li data-ns-test="holidaylist">Cellular Jail</li>
-<li data-ns-test="holidaylist">Ladakh</li>
-		<li data-ns-test="holidaylist">coimbatore</li>
+		<li data-ns-test="holidayList">Cellular Jail</li>
+<li data-ns-test="holidayList">Ladakh</li>
+		<li data-ns-test="holidayList">coimbatore</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
